appId: com.gestorfinanceiro.mobile
tags:
  - smoke
---
- launchApp:
    clearState: true
- tapOn: "Esqueceu a senha?"
- assertVisible: "Esqueceu a senha?"
- assertVisible: "E-mail"
